<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
  -->

<resources>

	<string name="app_name">Treebolic OWL Services</string>

	<!-- services -->
	<string name="service_broadcast_service">Treebolic OWL Broadcast Service</string>
	<string name="service_aidl_bound_service">Treebolic OWL AIDL-based Bound Service</string>
	<string name="service_messenger_bound_service">Treebolic OWL Messenger Bound Service</string>

	<!-- service descriptions -->
	<string name="description_service_broadcast_service">Produces Treebolic model from OWL data as a Broadcast Service</string>
	<string name="description_service_aidl_bound_service">Produces Treebolic model from OWL data as an AIDL-based Bound Service</string>
	<string name="description_service_messenger_bound_service">Produces Treebolic model from OWL data as a Messenger Bound Service</string>

	<!-- title -->
	<string name="title_settings">Settings</string>
	<string name="title_settings_service">Settings for service</string>
	<string name="title_activity_app_settings">Application</string>
	<string name="title_query">Run</string>
	<string name="title_source">Source</string>
	<string name="title_demo">Demo</string>
	<string name="title_finish">Finish</string>
	<string name="title_kill">Kill</string>

	<!-- ok/errors -->
	<string name="fail_nullquery">Null query</string>
	<string name="fail_nullclient">Null client</string>

</resources>