<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.treebolic.owl.service.MainActivity">

	<item
		android:id="@+id/action_query"
		android:title="@string/title_query"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_choose"
		android:title="@string/title_choose"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_download"
		android:title="@string/title_download"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_demo"
		android:title="@string/title_demo"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_finish"
		android:title="@string/title_finish"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_kill"
		android:title="@string/title_kill"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_settings"
		android:title="@string/title_settings"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_app_settings"
		android:title="@string/title_activity_app_settings"
		app:showAsAction="never"/>

</menu>